0.6.1 [in progress]
Added planet orbits feature
Added concept of sky cultures (currently western and polynesian/hawaiian)
Added meteor showers
Added deep space object image credits
Added manual (really semi-auto) zoom option (centers for you when you start zooming, zooms in increments with key presses)
Brightened star labels for readability
	
0.6.0 [31-05-2004]
Fixed atmosphere flash bug.
Fixed disk viewport windows version bug.
Improved portability for timezone management.
Made windows package installer.

0.6.0rc2 [28/04/2004]
Fixed Venus too small bug.
Fixed minor bugs from sourceforge bug reports.

0.6.0rc1 [27/04/2004]
Removed the previous patch to configure SDL because it caused some error on some systems.
Changed the global coordinate system into the conventionnal astronomical one (ie with z axis toward top and x toward us)
Stopped using the previous unreliable astro library with badly defined licence and use 2 libraries created from modified/simplified version of the LGPL library libnova. One called stellastro which manages the astronomical operations like time management etc. and another one called stellplanet which only computes the planetary positions.
Removed the module/class planet_mgr and use a hierarchical unified planet class instead to manage all the solar system bodies with objective to add planet satellites, asteroids, comete and manage planet obliquity, and rotation of the textures.
Remade in a coherent way all the s_utility conversion functions (in double precision).
Created a new class "stel_object" to manage the selected object in a good object oriented way.
Abandoned my previous vector class for a recreated version of the vecmath class (originally from celestia).
Use double precision for every planet, orbit and navigation calculation.
Centralized all the navigation/time variables and operations in a new class "navigator" instead of the non-object old navigation module.