@@ -27,8 +27,8 @@ class Constellation_mgr
 {
 public:
   //    Constellation_mgr(Vec3f lines_color = Vec3f(0.1, 0.15, 0.2), Vec3f lines_color = Vec3f(0.1,0.2,0.3));
-    Constellation_mgr(string _data_dir, string _sky_culture, Hip_Star_mgr *_hip_stars, string _font_filename, 
-		      Vec3f _lines_color, Vec3f _names_color);
+    Constellation_mgr(string _data_dir, string _sky_culture, string _sky_culture, Hip_Star_mgr *_hip_stars, 
+		      string _font_filename, Vec3f _lines_color, Vec3f _names_color);
     virtual ~Constellation_mgr();
     void set_sky_culture(string _sky_culture);
     void show_art(void);
@@ -43,6 +43,7 @@ public:
     Constellation* find_from_short_name(const string& shortname) const;
     // test that sky culture seems valid 
     bool validate_sky_culture(string _sky_culture);
+    void set_sky_locale(const string& _sky_locale);
 
 private:
 
@@ -55,7 +56,7 @@ private:
     Hip_Star_mgr * hipStarMgr;
     string dataDir;
     string skyCulture;
-
+    string skyLocale;
 };
 
 #endif // _CONSTELLATION_MGR_H_
