@@ -30,7 +30,7 @@ using namespace std ;
 class Hip_Star_mgr  
 {
 public:
-    Hip_Star_mgr(string _data_dir, string _sky_culture, string _font_filename);
+    Hip_Star_mgr(string _data_dir, string _sky_locale, string _font_filename);
     virtual ~Hip_Star_mgr();
     int read(FILE *);
     void draw(float star_scale, float star_mag_scale, float twinkle_amount, int name_ON, float maxMagStarName,
@@ -38,7 +38,7 @@ public:
     void draw_point(float star_scale, float star_mag_scale, float twinkle_amount, int name_ON, float maxMagStarName,
 		Vec3f equ_vision, tone_reproductor* _eye, Projector* prj, bool _gravity_label);	// Draw all the stars as points
     void save(void);                    	// Debug function
-    void set_sky_culture(string _sky_culture);
+    void set_sky_locale(string _sky_locale);
     Hip_Star * search(Vec3f Pos);  	// Search the star by position
 	Hip_Star * search(unsigned int);	// Search the star by HP number
 	// Return a stl vector containing the stars located inside the lim_fov circle around position v
@@ -59,7 +59,7 @@ private:
 	s_texture * starTexture;
 	s_font * starFont;
 	string dataDir;
-	string skyCulture;
+	string skyLocale;
 
 
 
