@@ -35,7 +35,8 @@ public:
     virtual ~SolarSystem();
 
 	// Init and load the solar system data from the file "planetfile".
-	void init(const string& font_fileName, const string& planetfile, Vec3f label_color,  Vec3f orbit_color);
+    //	void init(const string& font_fileName, const string& planetfile, Vec3f label_color,  Vec3f orbit_color);
+	void init(const string& _data_dir, const string& _sky_locale, const string& _font_filename, Vec3f label_color, Vec3f orbit_color);
 
 	// Compute the position for every elements of the solar system.
 	void compute_positions(double date);
@@ -56,6 +57,8 @@ public:
 	planet* get_earth(void) {return earth;}
 	planet* get_moon(void) {return moon;}
 
+	void set_sky_locale(string _sky_locale);
+
 private:
 	planet* sun;
 	planet* moon;
@@ -71,6 +74,8 @@ private:
 	{
 		bool operator()(planet* p1, planet* p2) { return p1->get_distance() > p2->get_distance(); }
 	};
+
+	string dataDir;
 };
 
 
