@@ -1,7 +1,8 @@
 0.6.1 [in progress]
+Rudimentary sky localization (no accented characters) for English, Spanish, French, and some Hawaiian sky labels (needs UI)
 Added planet orbits feature
-Added concept of sky cultures (currently western and polynesian/hawaiian)
-Added meteor showers
+Added concept of sky cultures for different constellations (currently western and polynesian, needs UI)
+Added meteor showers (key 9)
 Added deep space object image credits
 Added manual (really semi-auto) zoom option (centers for you when you start zooming, zooms in increments with key presses)
 Brightened star labels for readability
